--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
                 eligendi not be sit amet consectetur
               </p>
-              <h4>See More</h4>
+              <h4>Read More</h4>
             </div>
 
           </div>
@@ -453,7 +453,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
                 eligendi not be sit amet consectetur
               </p>
-              <h4>See More</h4>
+              <h4>Read More</h4>
             </div>
 
           </div>
@@ -475,7 +475,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim
                 eligendi not be sit amet consectetur
               </p>
-              <h4>See More</h4>
+              <h4>Read More</h4>
             </div>
 
           </div>
